# vecdb

./: Cargo.toml  LICENSE  README.md  rag_demo.py  vecdb.wal
.github/workflows/: ci.yml
vecdb-cli/: Cargo.toml
vecdb-core/: Cargo.toml
vecdb-core/benches/: hnsw_bench.rs
vecdb-core/src/: distance.rs  flat_index.rs  hnsw.rs  lib.rs  quantize.rs  quantizer.rs  storage.rs  wal.rs
vecdb-python/: setup.py
vecdb-python/vecdb/: __init__.py
vecdb-server/: Cargo.toml
vecdb-server/src/: main.rs
