[package]
name = "vecdb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
crc32fast = "1"
memmap2 = "0.9"
log = "0.4"
thiserror = "1"
rand = "0.8"

[dependencies]
linfa-clustering = "0.7"
ndarray = "0.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hnsw_bench"
harness = false