[package]
name = "vecdb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
vecdb-core = { path = "../vecdb-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"